geracao do access token via swag e correcao da busca do usuario pelo e-mail para usar First ao inves de Find
